<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Accountsify</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="action_save">Save</string>

    <!-- Labels and Hints for add transaction activity add_transaction.xml -->
    <string name="label_account">Account</string>
    <string name="label_notes">Notes</string>
    <string name="label_category">Category</string>
    <string name="label_subcategory">Sub Category</string>
    <string name="label_amount">Amount</string>
    <string name="label_date">Date</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="hint_account">Account</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_category">Category</string>
    <string name="hint_subcategory">Sub Category</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_date">Date</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="pick_date">Date and Time</string>

</resources>
