<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:id="@+id/add_transaction_layout"
    >

    <include layout="@layout/toolbar"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/transaction_ui_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="@string/label_account"
            android:layout_weight=".4"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />



        <Spinner
            android:id="@+id/add_transaction_account"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight=".6"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/transaction_ui_height"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_transaction_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_category"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/transaction_ui_height"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_transaction_subcategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_subcategory"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/transaction_ui_height"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/add_transaction_notes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_ui_height"
            android:hint="@string/label_notes"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <EditText
        android:id="@+id/add_transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_amount"
        android:inputType="numberDecimal" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/transaction_ui_height"
        android:orientation="horizontal">



        <EditText
            android:id="@+id/add_transaction_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:ems="10"
            android:inputType="date"
            android:onClick="showDatePickerDialog"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/add_transaction_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:inputType="time"
            android:ems="10"
            android:layout_weight=".5"
            android:gravity="center"
            android:onClick="showTimePickerDialog"
            android:textAlignment="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/transaction_ui_height"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:onClick="saveTransaction"
            android:text="@string/label_save" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:text="@string/label_cancel" />

    </LinearLayout>

</LinearLayout>
